--- a/Spring/Photostagram/src/main/resources/templates/member/birth.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/birth.html
@@ -3,6 +3,28 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
+<script>
+    $(function(){
+        $('#signin-btn').click(function(e){
+            e.preventDefault();
+
+            alert('birth!!!');
+
+            let year = $('select[name=year]').val();
+            let month = $('select[name=month]').val();
+            let day = $('select[name=day]').val();
+
+            let userData = sessionStorage.getItem("user");
+            let user = JSON.parse(userData);
+
+            user.birthDate = year + '-' + month + '-' + day;
+
+            sessionStorage.setItem("user", JSON.stringify(user));
+
+            location.href = '/Photostagram/member/email';
+        });
+    });
+</script>
 <main class="member">
     <div class="container">
         <div class="main-container">
