--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -2,8 +2,15 @@
 <html  xmlns:th="http://www.thymeleaf.org"
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
-
 <th:block layout:fragment="main">
+<script>
+$(function(){
+    $('#signin-btn').click(function(e){
+        e.preventDefault();
+        location.href = '/Photostagram/member/terms';
+    });
+});
+</script>
 <main class="member">
     <div class="container">
         <div class="main-container">
