--- a/Spring/Photostagram/src/main/resources/templates/member/register.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/register.html
@@ -4,6 +4,28 @@
        layout:decorate="layout/memberLayout">
 
 <th:block layout:fragment="main">
+<script>
+    $(function(){
+        $('#signin-btn').click(function(e){
+            e.preventDefault();
+            alert('register!!!');
+            let username = $('input[name=username]').val();
+            let name = $('input[name=name]').val();
+            let email = $('input[name=email]').val();
+            let password = $('input[name=password]').val();
+
+            let userData = {
+                "username": username,
+                "name": name,
+                "email": email,
+                "password": password
+            };
+
+            sessionStorage.setItem("user", JSON.stringify(userData));
+            location.href = '/Photostagram/member/birth';
+        });
+    });
+</script>
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -27,7 +49,7 @@
                             <div>또는</div>
                             <div></div>
                             </div>
-                            <form th:action="@{/member/register}" method="post">
+                            <form action="#" method="post">
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
