--- a/Spring/Photostagram/src/main/resources/templates/member/terms.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/terms.html
@@ -3,6 +3,50 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
+<script>
+// 체크박스 모두 선택
+function selectAll(selectAll) {
+    const checkboxes = document.getElementsByName('check');
+
+    checkboxes.forEach((checkbox) => {
+        checkbox.checked = selectAll.checked;
+    })
+}
+
+$(function() {
+    $('#signin-btn').click(function() {
+        let isCheck1 = $('input[class=terms]').is(':checked');
+        let isCheck2 = $('input[class=data]').is(':checked');
+        let isCheck3 = $('input[class=locate]').is(':checked');
+
+        if(isCheck1 && isCheck2 && isCheck3) {
+            alert('체크 완료!!!');
+            let userData = sessionStorage.getItem("user");
+            console.log("userData : ", userData);
+
+            $.ajax({
+                url: '/Photostagram/member/terms',
+                method: 'POST',
+                data: {userData : userData},
+                dataType: 'json',
+                success: function(data) {
+                    if(data.result = 1) {
+                        alert('회원가입이 완료되었습니다.');
+                        sessionStorage.clear();
+                        location.replace("/Photostagram/member/login");
+                    } else {
+                        alert('회원가입에 실패하였습니다.');
+                    }
+            });
+
+        }else{
+            alert('동의 체크를 하셔야 합니다.');
+            return false;
+        }
+    });
+});
+</script>
+
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -26,7 +70,7 @@
                                             이용약관 3개에 모두 동의
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" class="chkAll">
+                                            <input type="checkbox" class="chkAll" onclick="selectAll(this)">
                                         </li>
                                     </ul>
                                 </li>
@@ -37,7 +81,7 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" class="chkAll">
+                                            <input type="checkbox" name="check" class="terms">
                                         </li>
                                     </ul>
                                 </li>
@@ -48,7 +92,7 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" class="chkAll">
+                                            <input type="checkbox" name="check" class="data">
                                         </li>
                                     </ul>
                                 </li>
@@ -59,20 +103,20 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" class="chkAll">
+                                            <input type="checkbox" name="check" class="locate">
                                         </li>
                                     </ul>
                                 </li>
                             </ul>
                             <div class="btn-group">
-                                <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='/member/terms'">
+                                <button type="submit" class="btn-login" id="signin-btn">
                                     가입
                                 </button>
                             </div>
                             
                             <div class="birth">
                                 <div>
-                                    <a href="./birth.html">돌아가기</a>
+                                    <a th:href="@{/member/birth}">돌아가기</a>
                                 </div>
                             </div>                     
                         </div>
