--- a/Spring/Photostagram/src/main/resources/templates/css/style.css
+++ b/Spring/Photostagram/src/main/resources/templates/css/style.css
@@ -176,6 +176,7 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 14px;
+  margin-bottom: 10px;
 }
 
 .contents .comment_container .comment-detail {
