--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/layout}">
+      layout:decorate="~{layout/IndexLayout}">
 
 <th:block layout:fragment="main">
     <section id="container">
@@ -77,49 +77,57 @@
 
         <div class="contents_box">
           <!-- 메인콘텐츠 -->
+          <th:block th:each="article : ${articles}">
           <article class="contents">
             <header class="top">
               <div class="user_container">
-                <!----- 게시글 유저 프로필사진, 아이디 ------>
+                <!-- 상단 게시자 정보 div -->
                 <div class="profile_img">
-                  <a href="#"
-                  ><img src="./img/thumb.jpeg" alt="프로필이미지"
-                  /></a>
+
+                  <!------------- 게시글 상단 프로필사진입니다 --------------------->
+                  <a href="#"><img src="./img/thumb.jpeg" alt="프로필이미지"/></a>
+
                 </div>
                 <div class="user_name">
                   <div class="nick_name m_text">
-                    <a href="#">KindTiger</a> <span class="jum">•</span>
-                    <span class="time">1일</span> <span class="jum">•</span>
+                    <!------------- 게시글 상단 아이디입니다 --------------------->
+                    <a href="#" th:text="${article.memberVO.username}">KindTiger</a>
+
+                    <span class="jum">•</span>
+
+                    <!------------- 게시글 상단 날짜입니다 --------------------->
+                    <span class="time" th:text="${article.rdate}">1일</span>
+
+                    <span class="jum">•</span>
                     <input type="button" class="followBtn" value="팔로우" />
                   </div>
                   <div class="country s_text">Seoul, South Korea</div>
                 </div>
               </div>
 
-              <!------ 게시글 상단 토글박스 ------>
+              <!-- 게시글 상단 토글박스 div -->
               <div class="sprite_more_icon">
                 <div class="moreIcon" data-name="more"></div>
               </div>
             </header>
 
-            <!------- 게시글 사진 ------>
+            <!-- 게시글 사진 div -->
             <div class="img_section">
               <div class="trans_inner">
                 <div>
+
+                  <!------------- 게시글 사진입니다 --------------------->
                   <img src="./img/img_section/img01.jpg" alt="visual01" />
+
                 </div>
               </div>
             </div>
 
-            <!----- 좋아요, 댓글리스트, 공유, 북마크 ----->
+            <!--좋아요, 댓글리스트, 공유, 북마크-->
             <div class="bottom_icons">
               <div class="left_icons">
                 <div class="heart_btn">
-                  <div
-                          class="sprite_heart_icon_outline"
-                          name="39"
-                          data-name="heartbeat"
-                  ></div>
+                  <div class="sprite_heart_icon_outline"></div>
                 </div>
                 <div class="sprite_bubble_icon"></div>
                 <div class="sprite_dm_icon" data-name="share">
@@ -138,15 +146,20 @@
               좋아요 <span id="like-count-39">2,346</span>개
             </div>
 
-            <!----- 작성자 코멘트 ------>
+            <!-- 게시글 내용 div -->
             <div class="comment_container">
               <div class="comment" id="comment-list-ajax-post37">
                 <div class="comment-detail">
                   <div class="nick_name m_text">
-                    <a href="#">KindTiger</a>
+
+                    <!------------ 게시자 아이디 입니다 ----------->
+                    <a href="#" th:text="${article.memberVO.username}">KindTiger</a>
+
                   </div>
-                  <div class="commentWord">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo recusandae eos nihil sint itaque ea, alias nemo nam repellendus in delectus quas doloremque, numquam eaque inventore iure facere, vitae neque?
+
+                  <!------------- 게시글 내용 입니다 ----------------->
+                  <div class="commentWord" th:text="${article.content}">
+                    Lorem ipsum dolor sit amet, m repellend, numqu?
                   </div>
                 </div>
               </div>
@@ -161,118 +174,17 @@
 
             </div>
             <div class="commentMore">
-              <input
-                      type="button"
-                      class="commentAll"
-                      value="댓글 82개 모두 보기"
-              />
+              <input type="button" class="commentAll" value="댓글 82개 모두 보기"/>
             </div>
 
             <!----- 댓글 작성 폼 ------->
             <div class="comment_field" id="add-comment-post37">
-              <input type="hidden" name="uid" value="123">
+              <input type="hidden" name="uid" th:value="${#authentication.principal.user.username}">
               <input type="text" name="commentText" placeholder="댓글달기..." />
               <div class="upload_btn m_text">게시</div>
             </div>
           </article>
-          <article class="contents">
-            <header class="top">
-              <div class="user_container">
-                <!----- 게시글 유저 프로필사진, 아이디 ------>
-                <div class="profile_img">
-                  <a href="#"
-                  ><img src="./img/thumb.jpeg" alt="프로필이미지"
-                  /></a>
-                </div>
-                <div class="user_name">
-                  <div class="nick_name m_text">
-                    <a href="#">KindTiger</a> <span class="jum">•</span>
-                    <span class="time">1일</span> <span class="jum">•</span>
-                    <input type="button" class="followBtn" value="팔로우" />
-                  </div>
-                  <div class="country s_text">Seoul, South Korea</div>
-                </div>
-              </div>
-
-              <!------ 게시글 상단 토글박스 ------>
-              <div class="sprite_more_icon">
-                <div class="moreIcon" data-name="more"></div>
-              </div>
-            </header>
-
-            <!------- 게시글 사진 ------>
-            <div class="img_section">
-              <div class="trans_inner">
-                <div>
-                  <img src="./img/img_section/img01.jpg" alt="visual01" />
-                </div>
-              </div>
-            </div>
-
-            <!----- 좋아요, 댓글리스트, 공유, 북마크 ----->
-            <div class="bottom_icons">
-              <div class="left_icons">
-                <div class="heart_btn">
-                  <div
-                          class="sprite_heart_icon_outline"
-                          name="39"
-                          data-name="heartbeat"
-                  ></div>
-                </div>
-                <div class="sprite_bubble_icon"></div>
-                <div class="sprite_dm_icon" data-name="share">
-                  <img src="./img/DM-image.png" alt="" />
-                </div>
-              </div>
-              <div class="right_icon">
-                <div
-                        class="sprite_bookmark_outline"
-                        data-name="bookmark"
-                ></div>
-              </div>
-            </div>
-
-            <div class="likes m_text">
-              좋아요 <span id="like-count-39">2,346</span>개
-            </div>
-
-            <!----- 작성자 코멘트 ------>
-            <div class="comment_container">
-              <div class="comment" id="comment-list-ajax-post37">
-                <div class="comment-detail">
-                  <div class="nick_name m_text">
-                    <a href="#">KindTiger</a>
-                  </div>
-                  <div class="commentWord">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo recusandae eos nihil sint itaque ea, alias nemo nam repellendus in delectus quas doloremque, numquam eaque inventore iure facere, vitae neque?
-                  </div>
-                </div>
-              </div>
-
-              <div class="reply_user">
-                <span class="reply_nick">j_hlli</span>
-                <span class="reply_content">강아지가 너무 귀여워요!</span>
-                <span class="small_heart">
-                  <div class="sprite_small_heart_icon_outline"></div>
-                </span>
-              </div>
-
-            </div>
-            <div class="commentMore">
-              <input
-                      type="button"
-                      class="commentAll"
-                      value="댓글 82개 모두 보기"
-              />
-            </div>
-
-            <!----- 댓글 작성 폼 ------->
-            <div class="comment_field" id="add-comment-post37">
-              <input type="hidden" name="uid" value="123">
-              <input type="text" name="commentText" placeholder="댓글달기..." />
-              <div class="upload_btn m_text">게시</div>
-            </div>
-          </article>
+          </th:block>
         </div>
         <!-- <input type="hidden" id="page" value="1"> 왜 있는지 모름 (보류)-->
 
