--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" th:href="@{/css/post.css}"/>
     <script th:src="@{/js/aside.js}"></script>
     <script th:src="@{/js/proFollow.js}"></script>
+    <script th:src="@{/js/proPreview.js}"></script>
+    <script th:src="@{/js/proUpload.js}"></script>
     <script th:src="@{/js/post.js}"></script>
     <script>
       $(function(){
