--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -9,10 +9,21 @@
                   <div class="proPhoto">
                       <div>
                       <th:block th:if="${#strings.equals(myName, username)}">
-                      <input type="file" class="real-addProf" accept="image/*" style="display: none;"/>
+                        <input type="file" class="real-addProf" accept="image/*" style="display: none;"/>
+                          <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
+                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile" class="addProf"/>
+                          </th:block>
+                          <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
+                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" class="addProf"/>
+                          </th:block>
                       </th:block>
                       <th:block th:unless="${#strings.equals(myName, username)}"></th:block>
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" class="addProf"/>
+                          <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
+                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile"/>
+                          </th:block>
+                          <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
+                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile"/>
+                          </th:block>
                       </div>
                   </div>
                   <div class="detail">
@@ -29,18 +40,18 @@
                       </div>
                       <ul class="pMiddle">
                           <li>
-                              <span>게시물</span>3
+                              게시물<span>[[${post}]]</span>
                           </li>
                           <li>
-                              <span>팔로워</span>3
+                              팔로워<span>[[${follower}]]</span>
                           </li>
                           <li>
-                              <span>팔로우</span>3
+                              팔로잉<span>[[${following}]]</span>
                           </li>
                       </ul>
                       <p class="pAbout">
                           <span class="notice">
-                              홍길동
+                              [[${user.profileText}]]
                           </span>
                       </p>
                   </div>
@@ -115,29 +126,5 @@
                 </div>
             </div>
         </div>
-        <!--/*** 프로필 사진 업로드 ***/-->
-        <script>
-
-            function getProfile(input){
-                if(input.files && input.files[0]) {
-                    const reader = new FileReader()
-
-                    reader.onload = e => {
-                        const preview = document.querySelector('.addProf');
-                        preview.src = e.target.result
-                    }
-
-                    reader.readAsDataURL(input.files[0])
-                }
-            }
-
-            const real = document.querySelector('.real-addProf');
-            const fake = document.querySelector('.addProf');
-
-            fake.addEventListener('click', () => real.click());
-            real.addEventListener('change', e => {
-                getProfile(e.target);
-            });
-        </script>
     </th:block>
 </html>
