--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -6,13 +6,22 @@
         <div id="modi">
           <div id="myInfo">
               <div>
-                  <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile">
                   <div>
-                      <span>gildong</span>
-                      <a href="#">프로필 사진 바꾸기</a>
+                      <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
+                          <img th:src="|@{/}thumb/${user.profileImg}" alt="profile" class="addProf"/>
+                      </th:block>
+                      <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
+                          <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" class="addProf"/>
+                      </th:block>
+                  </div>
+                  <div>
+                      <input type="file" class="real-addProf" accept="image/*" style="display: none;"/>
+                      <span>[[${user.username}]]</span>
+                      <a href="#" class="changeProf">프로필 사진 바꾸기</a>
                   </div>
               </div>
               <form th:action="@{/profile/modify}" method="post">
+                  <input type="hidden" name="no" th:value="${user.no}"/>
                   <table>
                       <tbody>
                           <tr>
@@ -20,7 +29,7 @@
                                   <span>이름</span>
                               </td>
                               <td>
-                                  <input type="text" name="name" th:value="${user.name}"><br/>
+                                  <input type="text" name="name" th:value="${user.name}"/><br/>
                                   <span>사람들이 이름, 별명 또는 비즈니스 이름 등 회원님의 알려진 이름을 사용하여 회원님의 계정을 찾을 수 있도록 도와주세요.</span>
                                   <span>이름은 14일 안에 두 번만 변경할 수 있습니다.</span>
                               </td>
@@ -48,7 +57,7 @@
                                   <span>소개</span>
                               </td>
                               <td>
-                                  <textarea name="profileText" th:value="${user.profileText}"></textarea>
+                                  <textarea name="profileText">[[${user.profileText}]]</textarea>
                                   <span>0 / 150</span>
                               </td>
                           </tr>
@@ -64,7 +73,7 @@
                                   <span>이메일</span>
                               </td>
                               <td>
-                                  <input type="email" th:value="${user.email}">
+                                  <input type="email" name="email" th:value="${user.email}"/>
                               </td>
                           </tr>
                           <tr>
@@ -72,7 +81,7 @@
                                   <span>전화번호</span>
                               </td>
                               <td>
-                                  <input type="text" name="profilePhone" th:value="${user.profilePhone}">
+                                  <input type="text" name="profilePhone" th:value="${user.profilePhone}"/>
                               </td>
                           </tr>
                           <tr>
