--- a/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
@@ -27,7 +27,7 @@
           rel="stylesheet"
   />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script th:src="@{/js/aside.js}"></script>
+  <script th:src="@{/js/aside.js}" th:inline="javascript"></script>
   <script th:src="@{/js/index.js}"></script>
 </head>
 
