--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" th:href="@{/css/profile.css}"/>
     <link rel="stylesheet" th:href="@{/css/profileModify.css}"/>
     <link rel="stylesheet" th:href="@{/css/post.css}"/>
-    <script th:src="@{/js/aside.js}"></script>
+    <script th:src="@{/js/aside.js}" th:inline="javascript"></script>
     <script th:src="@{/js/proFollow.js}"></script>
     <script th:src="@{/js/post.js}"></script>
     <script>
