--- a/Spring/Photostagram/src/main/resources/templates/main.html
+++ b/Spring/Photostagram/src/main/resources/templates/main.html
@@ -156,7 +156,7 @@
   <div class="sidesearch">
     <div>
       <h2>검색</h2>
-      <input type="text" name="search" id="searchAll" placeholder="검색"></input>
+      <input type="text" name="search" id="searchAll" placeholder="검색"/>
       <button><img src="./img/search.png" alt=""></button>
     </div>
     <div>
@@ -1100,8 +1100,8 @@
       </div>
       <div class="modal_image_content">
         <div id="input_image" class="modal_image_upload_content">
-          <button class="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
-          <button class="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
+          <button class="beforeBtn" id="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
+          <button class="afterBtn" id="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
         </div>
         <div class="modal_content_write">
           <div class="feed_name">
@@ -1134,8 +1134,8 @@
       </div>
       <div class="modal_image_content">
         <div id="input_image_drop" class="modal_image_upload_content">
-          <button class="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
-          <button class="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
+          <button class="beforeBtn" id="beforeBtnDrop"><img src="./img/arrowL.png" alt=""></button>
+          <button class="afterBtn" id="afterBtnDrop"><img src="./img/arrowR_8x13.png" alt=""></button>
         </div>
         <div class="modal_content_write">
           <div class="feed_name">
