--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -451,17 +451,17 @@ html {height: 100%;}
         height: 700px;
       }
 
-      .searchlist > div:nth-of-type(1){
+      .searchlist > a > div:nth-of-type(1){
         width: 54px;
         height: 54px;
         float: left;
       }
 
-      .searchlist > div:nth-child(2){
+      .searchlist > a > div:nth-child(2){
         float: left;
       }
 
-      .searchlist > div:nth-of-type(1) > img{
+      .searchlist > a > div:nth-of-type(1) > img{
         width: 54px;
         height: 54px;
       }
@@ -472,7 +472,7 @@ html {height: 100%;}
         margin-top: 15px;
       }
 
-      .searchlist > div:nth-child(2) > div {
+      .searchlist > a >  div:nth-child(2) > div {
         width: 252px;
         height: auto;
         display: block;
@@ -480,7 +480,7 @@ html {height: 100%;}
         margin-left: 20px;
       }
 
-      .searchlist > div:nth-child(2) > div:nth-child(1) > h3 {
+      .searchlist > a > div:nth-child(2) > div:nth-child(1) > h3 {
         width: 252px;
         height: 18px;
         font-size: 14px;
@@ -488,19 +488,27 @@ html {height: 100%;}
         margin-top: 5px;
       }
 
-      .searchlist > div:nth-child(2) > div:nth-child(2) > h8 {
+      .searchlist > a > div:nth-child(2) > div:nth-child(2) > h8 {
         width: 252px;
         height: 18px;
       }
 
-      .searchlist > div:nth-child(3){
-        float: right;
+      .searchlist > a > div:nth-child(3){
+        position: absolute;
+        right: 0;
       }
 
-      .searchlist > div:nth-child(3) > button{
+      .searchlist > a > div:nth-child(3) > button{
         margin-top: 5px;
         background: none;
         border: none;
+      }
+
+      .searchlist > a{
+        display:block;
+        width: 348px;
+        height:56px;
+        position: relative;
       }
 
      /*알림*/
