--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="modal_image_content">
                     <div id="input_image" class="modal_image_upload_content">
-                        <button class="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
-                        <button class="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
+                        <button class="beforeBtn" id="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
+                        <button class="afterBtn" id="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
                     </div>
                     <div class="modal_content_write">
                         <div class="feed_name">
@@ -49,6 +49,40 @@
                         </div>
                         <div style="width: 100%; text-align: center">
                             <button id="button_write_feed" type="button" class="btn btn-primary" style="width: 268px"> 공유하기</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div id="modal_add_feed_content_drop" class="modal modal_overlay_content">
+            <div class="modal_window">
+                <div class="modal_title">
+                    <div class="modal_title_side"></div>
+                    <div style="margin: 5px"> 새 게시물 </div>
+                    <div class="modal_title_side">
+                <span id="close_modal_feed_drop" class="close_modal material-icons-outlined" style="font-size: 30px">
+                    close
+                </span>
+                    </div>
+                </div>
+                <div class="modal_image_content">
+                    <div id="input_image_drop" class="modal_image_upload_content">
+                        <button class="beforeBtn" id="beforeBtnDrop"><img src="./img/arrowL.png" alt=""></button>
+                        <button class="afterBtn" id="afterBtnDrop"><img src="./img/arrowR_8x13.png" alt=""></button>
+                    </div>
+                    <div class="modal_content_write">
+                        <div class="feed_name">
+                            <div class="profile_box">
+                                <img id="input_profile_image_drop" class="profile_img" src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/s1080x2048/165180104_277246477102900_6106347261862438192_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=730e14&_nc_ohc=1sN4d8i7rn8AX-7aKYN&_nc_ht=scontent-ssn1-1.xx&oh=5049b7cd176848e330b0f5ea95f28172&oe=615A08D1">
+                            </div>
+                            <span id="input_user_id_drop" class="feed_name_txt" th:data-no="${user.no}">[[${#authentication.principal.username}]]</span>
+                        </div>
+                        <div style="height: 440px">
+                            <textarea id="input_content_drop" class="feed_content_textarea form-control col-sm-5" rows="10" placeholder="설명을 입력하세요..."></textarea>
+                        </div>
+                        <div style="width: 100%; text-align: center">
+                            <button id="button_write_feed_drop" type="button" class="btn btn-primary" style="width: 268px"> 공유하기</button>
                         </div>
                     </div>
                 </div>
