--- a/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
@@ -7,8 +7,8 @@
           name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
   />
-  <title>Title</title>
-
+  <title>Photostagram</title>
+  <link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
   <!--
       날짜 : 2023 / 02 / 28
       이름 : 조광호
